MCADevOrg/src/objects/Submission__c.object
<CustomObject>
    <fields>
        <fullName>Application_Number__c</fullName>
        <label>Application Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attachment_Size_Limit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if respective attachment size limit exceeds in Submission Wizard.</description>
        <inlineHelpText>Check if respective attachment size limit exceeds in Submission Wizard.</inlineHelpText>
        <label>Attachment Size Limit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <picklist>
            <picklistValues>
                <fullName>API</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Create without Sending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Send without Attachments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Send with Attachments</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Submissions</relationshipLabel>
        <relationshipName>Submissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Submitted__c</fullName>
        <label>Date Submitted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Days_in_Underwriting__c</fullName>
        <label>Days in Underwriting</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DecliedReason__c</fullName>
        <label>Declined Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Sales volume</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Open Balances</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restricted Industry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Years in Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Past due balances</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Start Up Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tax liens</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Too much debt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NSFs / NDBs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fraud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bankruptcies</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Funder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Submission Bank value does not exist or does not match filter criteria.</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Bank</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Submissions</relationshipLabel>
        <relationshipName>Submissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Highest_Funding_Amt__c</fullName>
        <label>Highest Funding Amt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Longest_Term__c</fullName>
        <label>Longest Term</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>Submission Notes</description>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Submissions</relationshipLabel>
        <relationshipName>Submissions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Submissions</relationshipLabel>
        <relationshipName>Submissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RTR__c</fullName>
        <label>RTR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Selected_Attachment_Id__c</fullName>
        <label>Selected Attachment Id</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status_Date__c</fullName>
        <label>Status Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Prequal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SubmissionExternalId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SubmissionExternalId</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SubmissionWizard_Counter__c</fullName>
        <description>This field is use to store value of submission wizard counter.</description>
        <label>SubmissionWizard Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Submission_Name__c</fullName>
        <description>Get submission name in &apos;BankName-SubmissionName&apos; format.</description>
        <formula>Funder__r.Name  &amp; &quot;-(&quot; &amp; TRIM(SUBSTITUTE( Name, &quot;SUB-&quot;, &quot;&quot;)) &amp;&quot;)&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Submission Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Frame__c</fullName>
        <description>To store the time frame for which the site page link is accessible to the user.</description>
        <label>Time Frame</label>
        <type>Date</type>
    </fields>
    <label>Submission</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Opportunity__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Program__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>SUB-{00000}</displayFormat>
        <label>Submission Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Submissions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>